src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>A_B_Copy_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A/B Copy Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_Value_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Hoc Value Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Hoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Unit_Code__c</fullName>
        <label>Ad Unit Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Unit_Name__c</fullName>
        <label>Ad Unit Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowances__c</fullName>
        <label>Allowances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BasePrice__c</fullName>
        <label>BasePrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCI_Cancel_Reason_Code__c</fullName>
        <label>CCI Cancel Reason Code</label>
        <picklist>
            <controllingField>CCI_Cancel_Reason__c</controllingField>
            <picklistValues>
                <fullName>ITMSOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOMAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BADCRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTREQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCI_Cancel_Reason_Notes__c</fullName>
        <label>CCI Cancel Reason Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCI_Cancel_Reason__c</fullName>
        <label>CCI Cancel Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Item sold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Material not received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCI_Order_Item_ID__c</fullName>
        <externalId>true</externalId>
        <label>CCI Order Item ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCI_Package_Item_Id__c</fullName>
        <label>CCI Package Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Product_Name__c</fullName>
        <label>CCI Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Product__c</fullName>
        <label>CCI Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Schedule_Item_Id__c</fullName>
        <label>CCI Schedule Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Canceled_Reason__c</fullName>
        <label>Canceled Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charges__c</fullName>
        <label>Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Classification_Category_Name__c</fullName>
        <label>Classification Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Category__c</fullName>
        <label>Classification Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Main_Category_Name__c</fullName>
        <label>Classification Main Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Main_Category__c</fullName>
        <label>Classification Main Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Name__c</fullName>
        <label>Classification Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columns__c</fullName>
        <label>Columns</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Ad_Unit_Name__c</fullName>
        <label>Combined Ad Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Ad_Unit__c</fullName>
        <label>Combined Ad Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopySplit__c</fullName>
        <label>CopySplit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dateflex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dateflex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Display_Section__c</fullName>
        <label>Display Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Name__c</fullName>
        <label>Distribution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>Distribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Delivery_Date__c</fullName>
        <label>Insertion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCancelableOrderItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelableOrderItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Delivery_Date__c</fullName>
        <label>Last Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media_Code__c</fullName>
        <label>Media Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Name__c</fullName>
        <label>Media Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Units__c</fullName>
        <label>No. of Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_ID__c</fullName>
        <label>Opportunity Line ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <label>Package Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category_Name__c</fullName>
        <label>Product Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Main_Category_Name__c</fullName>
        <label>Product Main Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Main_Category__c</fullName>
        <label>Product Main Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Unit_Name__c</fullName>
        <label>Product Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Unit__c</fullName>
        <label>Product Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Name__c</fullName>
        <label>Publication Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_Page_No__c</fullName>
        <description>Published Page Number</description>
        <label>Published Page No</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_Copy_Split__c</fullName>
        <label>Regional Copy Split</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCC_Rate__c</fullName>
        <label>SCC Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Code__c</fullName>
        <label>Section Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Section_Name__c</fullName>
        <label>Sub Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Section__c</fullName>
        <label>Sub Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_For_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted For Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Category_Name__c</fullName>
        <label>Title Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Category__c</fullName>
        <label>Title Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Code__c</fullName>
        <label>Title Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Name__c</fullName>
        <label>Title Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Back_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Value Back Assigned To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Back_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Value Back Contract</label>
        <referenceTo>Value_Back_Contract__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Back__c</fullName>
        <label>Value Back</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WebSite__c</fullName>
        <label>WebSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Category_Name__c</fullName>
        <label>Website Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Category__c</fullName>
        <label>Website Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Code__c</fullName>
        <label>Website Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Name__c</fullName>
        <label>Website Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Zone_Code__c</fullName>
        <label>Zone Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Name__c</fullName>
        <label>Zone Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>